--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.62.0-1' %}
+{% set version = '1.65.0-1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -12,48 +12,85 @@ source:
   url:
     - https://cran.r-project.org/src/contrib/BH_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/BH/BH_{{ version }}.tar.gz
+  sha256: 82baa78afe8f1edc3c7e84e1c9924321047e14c1e990df9b848407baf3f7cb58
 
-  sha256: 5718a14084e30e35288a9e021487df5518913b1ae28f4131b69e34fbdd6d6e07
+
+  # patches:
+   # List any patch files here
+   # - fix.patch
 
 build:
+  # If this is a new build for the same version, increment the build number.
   number: 0
 
+  # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
+
 requirements:
   build:
     - r-base
+
   run:
     - r-base
 
 test:
   commands:
-    - $R -e "library('BH')"  # [not win]
+    # You can put additional test commands to be run here.
+    - $R -e "library('BH')"           # [not win]
     - "\"%R%\" -e \"library('BH')\""  # [win]
+
+  # You can also put a file called run_test.py, run_test.sh, or run_test.bat
+  # in the recipe that will be run at test time.
+
+  # requires:
+    # Put any additional test requirements here.
 
 about:
   home: https://CRAN.R-project.org/package=BH
   license: BSL-1.0
-  summary: |
-    Boost provides free peer-reviewed portable C++ source  libraries.  A large part of
+  summary: 'Boost provides free peer-reviewed portable C++ source  libraries.  A large part of
     Boost is provided as C++ template code which is resolved entirely at compile-time
     without linking.  This  package aims to provide the most useful subset of Boost
     libraries  for template use among CRAN package. By placing these libraries in  this
     package, we offer a more efficient distribution system for CRAN  as replication
-    of this code in the sources of other packages is  avoided. As of release 1.62.0-1,
-    the following Boost libraries are included: ''algorithm'' ''any'' ''atomic'' ''bimap''
-    ''bind'' ''circular_buffer'' ''concept'' ''config'' ''container'' ''date''_''time''
+    of this code in the sources of other packages is  avoided. As of release 1.65.0-1,
+    the following Boost libraries are included: ''algorithm'' ''align'' ''any'' ''atomic''
+    ''bimap'' ''bind'' ''circular_buffer'' ''concept'' ''config'' ''container'' ''date''_''time''
     ''detail'' ''dynamic_bitset'' ''exception'' ''filesystem'' ''flyweight'' ''foreach''
     ''functional'' ''fusion'' ''geometry'' ''graph'' ''heap'' ''icl'' ''integer'' ''interprocess''
     ''intrusive'' ''io'' ''iostreams'' ''iterator'' ''math'' ''move'' ''mpl'' ''multiprcecision''
     ''numeric'' ''pending'' ''phoenix'' ''preprocessor'' ''propery_tree'' ''random''
-    ''range'' ''scope_exit'' ''smart_ptr'' ''spirit'' ''tuple'' ''type_traits'' ''typeof''
-    ''unordered'' ''utility'' ''uuid''.
+    ''range'' ''scope_exit'' ''smart_ptr'' ''sort'' ''spirit'' ''tuple'' ''type_traits''
+    ''typeof'' ''unordered'' ''utility'' ''uuid''.'
+
   license_family: OTHER
 
 extra:
   recipe-maintainers:
     - johanneskoester
     - bgruening
+    - mingwandroid
+
+# The original CRAN metadata for this package was:
+
+# Package: BH
+# Type: Package
+# Title: Boost C++ Header Files
+# Version: 1.65.0-1
+# Date: 2017-08-24
+# Author: Dirk Eddelbuettel, John W. Emerson and Michael J. Kane
+# Maintainer: Dirk Eddelbuettel <edd@debian.org>
+# Description: Boost provides free peer-reviewed portable C++ source  libraries.  A large part of Boost is provided as C++ template code which is resolved entirely at compile-time without linking.  This  package aims to provide the most useful subset of Boost libraries  for template use among CRAN package. By placing these libraries in  this package, we offer a more efficient distribution system for CRAN  as replication of this code in the sources of other packages is  avoided. As of release 1.65.0-1, the following Boost libraries are included: 'algorithm' 'align' 'any' 'atomic' 'bimap' 'bind' 'circular_buffer' 'concept' 'config' 'container' 'date'_'time' 'detail' 'dynamic_bitset' 'exception' 'filesystem' 'flyweight' 'foreach' 'functional' 'fusion' 'geometry' 'graph' 'heap' 'icl' 'integer' 'interprocess' 'intrusive' 'io' 'iostreams' 'iterator' 'math' 'move' 'mpl' 'multiprcecision' 'numeric' 'pending' 'phoenix' 'preprocessor' 'propery_tree' 'random' 'range' 'scope_exit' 'smart_ptr' 'sort' 'spirit' 'tuple' 'type_traits' 'typeof' 'unordered' 'utility' 'uuid'.
+# License: BSL-1.0
+# BugReports: https://github.com/eddelbuettel/bh/issues
+# NeedsCompilation: no
+# Packaged: 2017-08-24 11:41:27 UTC; edd
+# Repository: CRAN
+# Date/Publication: 2017-08-24 14:39:52 UTC
+
+# See
+# http://docs.continuum.io/conda/build.html for
+# more information about meta.yaml
