--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.65.0-1' %}
+{% set version = '1.66.0-1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -12,24 +12,17 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/BH_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/BH/BH_{{ version }}.tar.gz
-  sha256: 82baa78afe8f1edc3c7e84e1c9924321047e14c1e990df9b848407baf3f7cb58
-
-
-  # patches:
-   # List any patch files here
-   # - fix.patch
+  sha256: 17d9eb5512d74aa7dd02ec98953408422e728b01ce63493a6a473070b9596a92
 
 build:
   merge_build_host: True  # [win]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
-
 
 requirements:
   build:
@@ -62,13 +55,13 @@ about:
     package, we offer a more efficient distribution system for CRAN  as replication
     of this code in the sources of other packages is  avoided. As of release 1.65.0-1,
     the following Boost libraries are included: ''algorithm'' ''align'' ''any'' ''atomic''
-    ''bimap'' ''bind'' ''circular_buffer'' ''concept'' ''config'' ''container'' ''date''_''time''
-    ''detail'' ''dynamic_bitset'' ''exception'' ''filesystem'' ''flyweight'' ''foreach''
-    ''functional'' ''fusion'' ''geometry'' ''graph'' ''heap'' ''icl'' ''integer'' ''interprocess''
-    ''intrusive'' ''io'' ''iostreams'' ''iterator'' ''math'' ''move'' ''mpl'' ''multiprcecision''
-    ''numeric'' ''pending'' ''phoenix'' ''preprocessor'' ''propery_tree'' ''random''
-    ''range'' ''scope_exit'' ''smart_ptr'' ''sort'' ''spirit'' ''tuple'' ''type_traits''
-    ''typeof'' ''unordered'' ''utility'' ''uuid''.'
+    ''bimap'' ''bind'' ''circular_buffer'' ''compute'' ''concept'' ''config'' ''container''
+    ''date''_''time'' ''detail'' ''dynamic_bitset'' ''exception'' ''filesystem'' ''flyweight''
+    ''foreach'' ''functional'' ''fusion'' ''geometry'' ''graph'' ''heap'' ''icl'' ''integer''
+    ''interprocess'' ''intrusive'' ''io'' ''iostreams'' ''iterator'' ''math'' ''move''
+    ''mpl'' ''multiprcecision'' ''numeric'' ''pending'' ''phoenix'' ''preprocessor''
+    ''propery_tree'' ''random'' ''range'' ''scope_exit'' ''smart_ptr'' ''sort'' ''spirit''
+    ''tuple'' ''type_traits'' ''typeof'' ''unordered'' ''utility'' ''uuid''.'
 
   license_family: OTHER
 
@@ -83,17 +76,17 @@ extra:
 # Package: BH
 # Type: Package
 # Title: Boost C++ Header Files
-# Version: 1.65.0-1
-# Date: 2017-08-24
+# Version: 1.66.0-1
+# Date: 2018-02-12
 # Author: Dirk Eddelbuettel, John W. Emerson and Michael J. Kane
 # Maintainer: Dirk Eddelbuettel <edd@debian.org>
-# Description: Boost provides free peer-reviewed portable C++ source  libraries.  A large part of Boost is provided as C++ template code which is resolved entirely at compile-time without linking.  This  package aims to provide the most useful subset of Boost libraries  for template use among CRAN package. By placing these libraries in  this package, we offer a more efficient distribution system for CRAN  as replication of this code in the sources of other packages is  avoided. As of release 1.65.0-1, the following Boost libraries are included: 'algorithm' 'align' 'any' 'atomic' 'bimap' 'bind' 'circular_buffer' 'concept' 'config' 'container' 'date'_'time' 'detail' 'dynamic_bitset' 'exception' 'filesystem' 'flyweight' 'foreach' 'functional' 'fusion' 'geometry' 'graph' 'heap' 'icl' 'integer' 'interprocess' 'intrusive' 'io' 'iostreams' 'iterator' 'math' 'move' 'mpl' 'multiprcecision' 'numeric' 'pending' 'phoenix' 'preprocessor' 'propery_tree' 'random' 'range' 'scope_exit' 'smart_ptr' 'sort' 'spirit' 'tuple' 'type_traits' 'typeof' 'unordered' 'utility' 'uuid'.
+# Description: Boost provides free peer-reviewed portable C++ source  libraries.  A large part of Boost is provided as C++ template code which is resolved entirely at compile-time without linking.  This  package aims to provide the most useful subset of Boost libraries  for template use among CRAN package. By placing these libraries in  this package, we offer a more efficient distribution system for CRAN  as replication of this code in the sources of other packages is  avoided. As of release 1.65.0-1, the following Boost libraries are included: 'algorithm' 'align' 'any' 'atomic' 'bimap' 'bind' 'circular_buffer' 'compute' 'concept' 'config' 'container' 'date'_'time' 'detail' 'dynamic_bitset' 'exception' 'filesystem' 'flyweight' 'foreach' 'functional' 'fusion' 'geometry' 'graph' 'heap' 'icl' 'integer' 'interprocess' 'intrusive' 'io' 'iostreams' 'iterator' 'math' 'move' 'mpl' 'multiprcecision' 'numeric' 'pending' 'phoenix' 'preprocessor' 'propery_tree' 'random' 'range' 'scope_exit' 'smart_ptr' 'sort' 'spirit' 'tuple' 'type_traits' 'typeof' 'unordered' 'utility' 'uuid'.
 # License: BSL-1.0
 # BugReports: https://github.com/eddelbuettel/bh/issues
 # NeedsCompilation: no
-# Packaged: 2017-08-24 11:41:27 UTC; edd
+# Packaged: 2018-02-12 19:11:19.852233 UTC; deddelbuettel
 # Repository: CRAN
-# Date/Publication: 2017-08-24 14:39:52 UTC
+# Date/Publication: 2018-02-13 23:48:11 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
